# gateway-info-modifier-example

./: README.md
qt-gateway-info-modifier-example/: CMakeLists.txt  README.md  local.cmake.template
qt-gateway-info-modifier-example/src/: CMakeLists.txt  ConfigReader.cpp  ConfigReader.h  GatewayInfoMessage.h  GatewayInfoModifier.cpp  Header.h  MobileInterfacesInfo.h  PackageInfo.h  PanamaMessage.h  QxtConfig_netcomm.cmake  StreamConnectorInfo.h
